fix nav interference with logo  on smaller 550px  screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,7 +375,8 @@ footer{
         float:left;}
 
         nav{
-            letter-spacing: 0;}
+            letter-spacing: 0;
+        padding: 0;}
         }
 
     
